# be-breaks-api

./: README.md  docker-compose.yaml  pyproject.toml
src/: config.py  depends.py  main.py  middlewares.py  worker.py
src/contollers/: 3d.py  image.py
src/contollers/genai/: genai_controller.py  genai_helpers.py
src/routers/: genai.py  helpers.py
src/services/api/: api_integrator.py
src/services/aws/: s3.py
src/services/genai/: openai.py
src/services/huggingface/: generate_image.py  generate_mesh.py
src/services/huggingface/archive/: image_to_3d.py
src/services/redis/: config.py  helpers.py
